--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <meta property="og:title" content="ISL - IoT M2M Connectivity Solutions" />
     <meta property="og:description" content="Empowering seamless IoT M2M connectivity for the future of intelligent systems. 24/7 support, global coverage, enterprise-grade security." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="src/assets/iisl-logo.png" />
   </head>
 
   <body>
